--- a/src/sass/atoms/squaret.scss
+++ b/src/sass/atoms/squaret.scss
@@ -10,6 +10,7 @@
     transform: skew(-15deg);
     border-radius: 0.15em;
     padding: 0.25em;
+    text-transform: capitalize;
   }
   &__p {
     transform: skew(15deg);
