--- a/src/sass/components/cardv2.scss
+++ b/src/sass/components/cardv2.scss
@@ -15,6 +15,7 @@
     width: 6.5em;
     height: 6.5em;
     mix-blend-mode: multiply;
+    object-fit: contain;
   }
   &__p {
     font-size: 0.8em;
