--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,7 +14,11 @@
   './atoms/priced.scss', './atoms/listoption.scss', './atoms/envios.scss',
   './atoms/count.scss', './components/options.scss',
   './components/optionslist.scss', './atoms/inputsquare.scss',
-  './components/cartslide.scss', './components/viewcart.scss';
+  './components/cartslide.scss', './components/viewcart.scss',
+  './components/user.scss', './components/products.scss',
+  './components/filter.scss', './components//menu.scss',
+  './components/userpage.scss', './components/cartpage.scss',
+  './components/container.scss', './data/data.scss';
 .main {
   // background: $background;
   // height: 200vh;
