--- a/src/sass/atoms/slides.scss
+++ b/src/sass/atoms/slides.scss
@@ -22,6 +22,9 @@
     width: 25em;
     overflow: hidden;
     aspect-ratio: 1 / 1;
+    @include responsive(700px) {
+      width: 17em;
+    }
   }
   &__container {
     width: inherit;
@@ -39,6 +42,9 @@
     height: 25em;
     object-fit: scale-down;
     // height: 100%;
+    @include responsive(700px) {
+      height: auto;
+    }
   }
   &__r {
     position: absolute;
