--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -13,15 +13,44 @@
     height: 7em;
     // background: red;
   }
+  &__fixed {
+    width: 100%;
+    background: #000;
+    padding: 0 0.5em;
+    @include flex(column, nowrap, center, center, 0em);
+  }
   &__bottom {
     width: 100%;
     max-width: 1170px;
     padding: 0.3em 0;
+    background: #000;
     @include flex(row, nowrap, space-between, center, 1em);
   }
   &__nav {
     @include flex(row, nowrap, space-between, center, 0.3em);
     position: relative;
+    @include responsive(650px) {
+      display: none;
+    }
+  }
+  &__media {
+    display: none;
+    width: 2.8em;
+    height: 2.8em;
+    border-radius: 0.2em;
+    cursor: pointer;
+    @include responsive(650px) {
+      @include flex(column, nowrap, center, center, 0);
+      // display: block;
+    }
+    &:hover {
+      background: #262626;
+    }
+    &--i {
+      cursor: pointer;
+      width: 1.2em;
+      box-sizing: content-box;
+    }
   }
   &__products {
     background: #fff;
@@ -36,7 +65,7 @@
     box-sizing: content-box;
     border-bottom: none;
     &--list {
-      z-index: 50;
+      z-index: 10;
       position: absolute;
       border: 0.15em solid #000;
       border-top: none;
@@ -90,6 +119,8 @@
       color: #000;
     }
   }
+  &__text {
+  }
   &__icons {
     @include flex(row, nowrap, center, center, 0.2em);
   }
@@ -103,13 +134,4 @@
     position: absolute;
     top: 100%;
   }
-}
-[data-list='true'] {
-  top: 3.15em;
-  border: none;
-  height: 20em;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  width: 17em;
-  box-shadow: 0 1px 4px 1px rgba(0, 0, 0, 0.09);
 }
