--- a/src/sass/components/modal.scss
+++ b/src/sass/components/modal.scss
@@ -5,10 +5,12 @@
   right: 0;
   left: 0;
   @include flex(row, nowrap, center, center, 0);
-  z-index: 15;
+  z-index: 55;
   background: #00000099;
   backdrop-filter: blur(0.5em);
+  padding: 0 1em;
 }
 [data-modal='true'] {
   @include flex(row, nowrap, flex-end, flex-end, 0);
+  padding: 0;
 }
