--- a/src/sass/components/user.scss
+++ b/src/sass/components/user.scss
@@ -1,2 +1,35 @@
 .user {
+  position: relative;
+  &__container {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    z-index: 20;
+    width: 14em;
+    height: 20em;
+    color: $color-li;
+    background: #fff;
+    box-shadow: 0 1px 15px rgba(0, 0, 0, 0.25);
+    @include flex(column, nowrap, center, center, 2em);
+  }
+  &__div {
+    @include flex(column, nowrap, center, center, 1em);
+    width: 100%;
+  }
+  &__inputs {
+    @include flex(column, nowrap, center, center, 1em);
+  }
+  &__h3 {
+    font-weight: bold;
+  }
+  &__btn {
+    background: #000;
+    width: 80%;
+    height: 2em;
+    color: #fff;
+    &:hover {
+      background: $color-dark;
+    }
+    // flex-grow: 1;
+  }
 }
