--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -3,10 +3,15 @@
   @include flex(row, wrap, center, center, 0.7em);
   background: #fff;
   padding: 2em 0;
+  position: relative;
+  z-index: 55;
   &__section {
     width: 97%;
     max-width: 1170px;
     padding: 0.5em 0;
     @include flex(row, wrap, center, center, 0.7em);
+  }
+  &__category {
+    position: relative;
   }
 }
