--- a/src/sass/components/viewcart.scss
+++ b/src/sass/components/viewcart.scss
@@ -33,6 +33,7 @@
   &__btncart {
     background: #f0f0f0;
     color: #3d464d;
+    cursor: pointer;
     &:hover {
       background: $color-dark;
       color: #fff;
