--- a/src/sass/variables/variables.scss
+++ b/src/sass/variables/variables.scss
@@ -7,6 +7,7 @@ $shadow-yello: #cc8b13;
 // $buttons: #1f3540;
 $color-hover--list: #f2f2f2;
 $color-dark: #3d464d;
+$color-text: #3d464dd1;
 $color-li: #262626;
 $color-drop-gray: #b2b2b2;
 $color-quotes: #007bff;
