--- a/src/css/main.css
+++ b/src/css/main.css
@@ -203,6 +203,7 @@ button {
   align-items: flex-start;
   gap: 1em;
   box-shadow: 0 0 0.2em #3d464d;
+  text-transform: capitalize;
 }
 .card:hover .card__div {
   background: #e5e5e5;
@@ -284,7 +285,7 @@ button {
   color: #fb9e0b;
 }
 .card__stock--non {
-  color: #2cb1ac;
+  color: rgb(255, 102, 102);
 }
 .card__quotes {
   text-transform: uppercase;
@@ -956,6 +957,10 @@ button {
   width: 4.7em;
   height: 4.7em;
 }
+.component__span {
+  text-transform: capitalize;
+}
+
 .title {
   color: #fff;
   font-size: 2.5em;
@@ -1024,6 +1029,7 @@ button {
   background: #fff;
   box-shadow: 0 1px 4px 1px rgba(0, 0, 0, 0.09);
   padding: 0 0.4em;
+  text-transform: capitalize;
   display: flex;
   flex-flow: row nowrap;
   justify-content: flex-start;
@@ -1211,6 +1217,8 @@ button {
   gap: 0.7em;
   background: #fff;
   padding: 2em 0;
+  position: relative;
+  z-index: 55;
 }
 .footer__section {
   width: 97%;
@@ -1221,6 +1229,9 @@ button {
   justify-content: center;
   align-items: center;
   gap: 0.7em;
+}
+.footer__category {
+  position: relative;
 }
 
 .listf {
@@ -1261,6 +1272,11 @@ button {
 .listf__i {
   width: 1em;
   height: 1em;
+}
+.listf__link {
+  font-weight: bold;
+  cursor: pointer;
+  font-size: 0.85em;
 }
 .listf__footer {
   width: 150px;
@@ -1611,7 +1627,7 @@ button {
   justify-content: center;
   align-items: center;
   gap: 0;
-  z-index: 55;
+  z-index: 65;
   background: rgba(0, 0, 0, 0.6);
   backdrop-filter: blur(0.5em);
   padding: 0 1em;
@@ -1693,6 +1709,7 @@ button {
 .table {
   flex-grow: 1;
   background: #fff;
+  width: 100%;
   box-sizing: content-box;
 }
 .table__table {
@@ -2049,6 +2066,7 @@ button {
 .viewcart__btncart {
   background: #f0f0f0;
   color: #3d464d;
+  cursor: pointer;
 }
 .viewcart__btncart:hover {
   background: #3d464d;
@@ -2067,12 +2085,14 @@ button {
   position: relative;
 }
 .user__container {
+  box-sizing: content-box;
   position: absolute;
   top: 100%;
   right: 0;
   z-index: 20;
   width: 14em;
-  height: 20em;
+  height: auto;
+  padding: 1em 0.5em;
   color: #262626;
   background: #fff;
   box-shadow: 0 1px 15px rgba(0, 0, 0, 0.25);
@@ -2109,6 +2129,41 @@ button {
 .user__btn:hover {
   background: #3d464d;
 }
+.user__on {
+  font-size: 0.8em;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  gap: 0;
+}
+.user__on--email {
+  width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5em;
+  padding: 1em 0.5em;
+  border-bottom: 1px solid #ebebeb;
+}
+.user__on--email:hover {
+  background: #f2f2f2;
+}
+.user__on--i {
+  width: 1em;
+}
+.user__on--exit {
+  width: 100%;
+  padding: 0.4em;
+  border-radius: 0.2em;
+  text-align: left;
+  font-size: 1em;
+  padding: 1em 0.5em;
+}
+.user__on--exit:hover {
+  background: #f2f2f2;
+}
 
 .products {
   background: #f7f7f7;
@@ -2118,6 +2173,10 @@ button {
   justify-content: center;
   align-items: center;
   gap: 0;
+}
+.products__order {
+  width: 100%;
+  color: #000;
 }
 .products__container {
   width: 100%;
@@ -2162,6 +2221,15 @@ button {
 .products__count {
   width: 100%;
   font-size: 1.1em;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 1em;
+}
+.products__length {
+  width: 100%;
+  max-width: 13em;
 }
 .products__image {
   width: 15em;
@@ -2178,10 +2246,17 @@ button {
 .filter {
   color: #262626;
   max-width: 15em;
-  background: #fff;
+  position: relative;
   width: 100%;
-  box-shadow: 0 1px 4px 1px rgba(0, 0, 0, 0.09);
   font-weight: bold;
+}
+.filter__fixed {
+  width: 100%;
+  top: 76px;
+  width: 15em;
+  background: #fff;
+  padding: 0 1em;
+  box-shadow: 0 1px 4px 1px rgba(0, 0, 0, 0.09);
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
@@ -2508,7 +2583,7 @@ button {
   flex-flow: row nowrap;
   justify-content: flex-start;
   align-items: flex-start;
-  gap: 0;
+  gap: 0.4em;
   font-weight: bold;
   font-size: 1.5em;
 }
@@ -2537,6 +2612,18 @@ button {
     max-width: 100%;
     flex-direction: column-reverse;
   }
+}
+.cartpage__null {
+  display: block;
+  width: 100%;
+  padding: 1em 0;
+  text-align: center;
+  letter-spacing: 1px;
+  font-weight: bold;
+}
+.cartpage__results {
+  color: #006c00;
+  font-weight: bold;
 }
 
 .container {
@@ -2598,9 +2685,398 @@ button {
   padding: 0 0 0 1.2em;
 }
 
+[data-none=true] {
+  padding: 0;
+  display: none !important;
+}
+
+[data-none=true] {
+  padding: 0;
+  display: none !important;
+}
+
+.order {
+  color: #000;
+  width: 100%;
+  max-width: 10em;
+  background: #fff;
+  position: relative;
+  border: 1px solid #000;
+  box-sizing: border-box;
+}
+.order div div i {
+  color: #000;
+}
+.order__absolute {
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  background: #fff;
+  z-index: 50;
+  left: -1px;
+  border: 1px solid #000;
+  border-top: none;
+  box-sizing: content-box;
+}
+.order__map {
+  color: #000;
+}
+.order__li {
+  cursor: pointer;
+}
+
+.register {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 1.5em;
+  width: 100%;
+}
+@media screen and (max-width: 900px) {
+  .register {
+    flex-direction: column;
+  }
+}
+.register__menu {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 0;
+  width: 100%;
+  max-width: 13em;
+  height: 20em;
+  background: transparent;
+  box-shadow: 0 0 0 2px #f2f2f2 inset;
+}
+.register__menu--text {
+  font-weight: bold;
+  padding: 0.8em 0.7em;
+}
+@media screen and (max-width: 900px) {
+  .register__menu--text {
+    display: none;
+  }
+}
+@media screen and (max-width: 900px) {
+  .register__menu {
+    flex-direction: row;
+    height: auto;
+    max-width: 100%;
+    border-bottom: 2px solid #dfdddd;
+    position: relative;
+    height: 43.38px;
+  }
+}
+.register__span {
+  font-size: 1.3em;
+}
+.register__ul {
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (max-width: 900px) {
+  .register__ul {
+    flex-direction: row;
+    position: absolute;
+    top: 0;
+  }
+}
+.register__li {
+  padding: 0.7em;
+  color: rgba(61, 70, 77, 0.8196078431);
+  cursor: pointer;
+}
+.register__dates {
+  flex-grow: 1;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5em;
+}
+@media screen and (max-width: 900px) {
+  .register__dates {
+    width: 100%;
+  }
+}
+.register__init {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 1.5em;
+  width: 100%;
+}
+@media screen and (max-width: 720px) {
+  .register__init {
+    flex-direction: column;
+  }
+}
+.register__image {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5em;
+  height: 20em;
+  width: 20em;
+  background: #fff;
+  color: rgba(61, 70, 77, 0.8196078431);
+  box-shadow: 0 0 0 2px #f2f2f2 inset;
+  flex-grow: 1;
+}
+@media screen and (max-width: 720px) {
+  .register__image {
+    width: 100%;
+  }
+}
+.register__img {
+  border-radius: 50%;
+}
+.register__name {
+  font-weight: 600;
+  color: #3d464d;
+}
+.register__btn {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  gap: 0em;
+}
+.register__edit {
+  width: 100%;
+  background: #f0f0f0;
+  padding: 0.5em 0.7em;
+  border-radius: 0.2em;
+}
+.register__edit:hover {
+  background: #3d464d;
+  color: #fff;
+}
+.register__address {
+  background: #fff;
+  height: 20em;
+  width: 20em;
+  box-shadow: 0 0 0 2px #f2f2f2 inset;
+  padding: 1em 1.5em;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  gap: 0em;
+  position: relative;
+  flex-grow: 1;
+}
+@media screen and (max-width: 720px) {
+  .register__address {
+    width: 100%;
+  }
+}
+.register__mis {
+  position: absolute;
+  background: #262626;
+  text-transform: uppercase;
+  color: #fff;
+  font-size: 0.75em;
+  padding: 0.5em;
+  top: 0;
+  right: 2em;
+}
+.register__textinit {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  gap: 0.4em;
+  width: 100%;
+}
+.register__h2 {
+  width: 100%;
+  font-weight: bold;
+}
+.register__addres {
+  width: 100%;
+}
+.register__content {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 0.1em;
+  padding: 0.5em 0;
+  width: 100%;
+  border-bottom: 1px solid #dfdddd;
+}
+.register__info {
+  font-size: 0.76em;
+  color: rgba(61, 70, 77, 0.8196078431);
+}
+.register__button {
+  width: 100%;
+  text-align: left;
+  padding: 1em 0;
+  color: #000;
+  cursor: pointer;
+  font-size: 0.95em;
+  font-weight: 500;
+}
+.register__modal {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  background: #fff;
+  padding: 2em 1.5em;
+  position: relative;
+}
+.register__modal form {
+  box-shadow: none;
+}
+.register__i {
+  width: 1em;
+  color: rgba(61, 70, 77, 0.8196078431);
+  position: absolute;
+  top: 0.5em;
+  right: 0.5em;
+  cursor: pointer;
+}
+.register__i:hover {
+  color: #000;
+}
+.register__informacion {
+  font-weight: bold;
+  font-size: 1.8em;
+}
+
+[data-li-select=true] {
+  border-left: 2px solid #262626;
+}
+@media screen and (max-width: 900px) {
+  [data-li-select=true] {
+    border: none;
+    border-bottom: 2px solid #262626;
+  }
+}
+
+.orders {
+  background: #fff;
+  box-shadow: 0 0 0 2px #f2f2f2 inset;
+  width: 100%;
+}
+.orders__h2 {
+  font-weight: bold;
+  font-size: 1.3em;
+  padding: 1em;
+  border-bottom: 2px solid #ebebeb;
+}
+.orders__table {
+  width: 100%;
+}
+.orders__thead {
+  width: 100%;
+}
+.orders__tr {
+  width: 100%;
+  border: 2px solid #ebebeb;
+}
+.orders__th {
+  width: 20%;
+  padding: 1em;
+  text-transform: uppercase;
+  color: rgba(61, 70, 77, 0.8196078431);
+  font-size: 0.9em;
+  font-weight: normal;
+  text-align: left;
+}
+.orders__view {
+  cursor: pointer;
+}
+.orders__products {
+  font-size: 0.9em;
+}
+.orders__modal {
+  background: #fff;
+  width: 100%;
+  height: 35em;
+  max-width: 30em;
+  position: relative;
+  text-transform: capitalize;
+  padding: 2em 1em;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 1em;
+}
+.orders__title--bil {
+  font-size: 1.5em;
+  font-weight: bold;
+}
+.orders__close {
+  width: 1.2em;
+  position: absolute;
+  top: 0.4em;
+  right: 0.4em;
+  cursor: pointer;
+  color: #b2b2b2;
+}
+.orders__close:hover {
+  color: #3d464d;
+}
+.orders__array {
+  width: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 1em;
+}
+.orders__map {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 0.5em;
+  width: 100%;
+  overflow: auto;
+}
+.orders__bil {
+  width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0;
+}
+.orders__pro {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0;
+}
+.orders__image {
+  object-fit: contain;
+}
+.orders__price {
+  font-weight: bold;
+}
+.orders__total {
+  width: 100%;
+  align-self: flex-end;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0;
+}
+
 .main {
   font-family: Centranube;
   background: #f7f7f7;
+  padding: 0 0 2em 0;
 }
 .main__div {
   width: 100%;
