--- a/src/sass/components/cardv2.scss
+++ b/src/sass/components/cardv2.scss
@@ -6,6 +6,7 @@
   background: #fff;
   box-shadow: 0 1px 4px 1px rgba(0, 0, 0, 0.09);
   padding: 0 0.4em;
+  text-transform: capitalize;
   &:hover {
     background: $background;
   }
