--- a/src/sass/data/data.scss
+++ b/src/sass/data/data.scss
@@ -28,3 +28,11 @@
 [data-ul='true'] li {
   padding: 0 0 0 1.2em;
 }
+[data-none='true'] {
+  padding: 0;
+  display: none !important;
+}
+[data-none='true'] {
+  padding: 0;
+  display: none !important;
+}
